Training with evaluation on the pitch values of GuitarSet (#2)
* CREPE inspired: weighted average tested only with one pitch_bin present per time frame

* CREPE inspired: add Sigmoid() to fretnet_crepe pitch_head

* update README: traning script with nohup instructions

* CREPE inspired: start the BCE loss function, copy some functionality from penn

* CREPE inspired: basic BCE loss functionality

* add bins_to_cents function in convert.py
* create __init__.py files in tools and train dirs
* new test for testing the loss funciton

* CREPE + PENN + FRETNET inspired: start to write the train function, train data loader almost ready

* CREPE + PENN + FRETNET inspired: work in progress

* CREPE + PENN + FRETNET inspired: work in progress 2

* CREPE + PENN + FRETNET inspired: wip - create pitch entry in the training batch

* CREPE + PENN + FRETNET inspired: wip - keep working on batching pitch values

* CREPE + PENN + FRETNET inspired: pitch batching finally functional

* minor fixes to GutiarSetPPN initiation

* Even more fixes

* Keynames and constants are all over the place - will need fixes

* Make the progress bar update itself every step

* Move all the constant to poly_pitch_net/config.py

* Fix the GuitarSetPPN and GSET_PLAYERS typo in train.py

* use gpu for tests if possible

* add tests for GuitarSet validity

* Progress bar added to dataset batch tests

* Test for ungzip fails

* Summary name train_loss binary_cross_entropy_with_logits is illegal; using train_loss_binary_cross_entropy_with_logits instead.

* Update training function with better status bars and evaluation

* Set evaluation loader to provide 200 time frames

test for ungzip the validation set

* Give pitch_bins in the loss function their own name

* Try larger kernel numbers

* Add with torch.no_grad() statement to eval()

* Delete the sigmoid function from the model's recipe

* Log step counter with the writer

* plot_poly_pitch n

--- a/README.adoc
+++ b/README.adoc
@@ -31,6 +31,12 @@ If any errors related to missing dictionary keys occur, make sure that the `rese
 python3 poly_pitch_net_experiments/experiment_fretnet_cnn.py
 ----
 
+.run the training script with nohup
+[source, shell]
+----
+nohup python3 poly_pitch_net_experiments/experiment_fretnet_cnn.py > output.txt 2>&1 &
+----
+
 == Tests
 
 Pytest is the framework of our choice. 
